--- a/client1.html
+++ b/client1.html
@@ -8,6 +8,9 @@
         
         <input type="text" id="textfield_index" />
        <br /> <button onclick="client_get_number()"> Guess number </button> 
+        <br /><br />
+       <!-- Server response to client at this field -->
+       Server http-respond message to client : <p id="answer_field" ></p>
       
     </body>
 </html>    
